# Autonomous-wheelchair-project-

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/pysdf/share/pysdf/: package.bash  package.zsh
install/turtlebot_x/lib/turtlebot_x/: driving_node  video_subscriber
install/turtlebot_x/share/turtlebot_x/: chairbot.sdf  chairbot.urdf  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/turtlebot_x/share/turtlebot_x/launch/: gazebo.launch.py
install/turtlebot_x/share/turtlebot_x/maps/: turtlebot3_world.pgm
install/turtlebot_x/share/turtlebot_x/meshes/: pneu2_Link.dae  pneu3_Link.dae
install/turtlebot_x/share/turtlebot_x/params/: nav2_multirobot_params_1.yaml  nav2_multirobot_params_all.yaml
install/turtlebot_x/share/turtlebot_x/worlds/: chairbot.model  chairbot2.world
log/: latest_build  latest_list
src/turtlebot_x/: setup.cfg  setup.py
src/turtlebot_x/launch/: bringup_launch.py  chairbot_simulation_launch.py  cloned_multi_chairbot_simulation_launch.py  demo.launch.py  joystick.launch.py  localization_launch.py  navigation_launch.py  online_sync_launch.py  rviz_launch.py  slam_launch.py  unique_multi_chairbot_simulation_launch.py
src/turtlebot_x/meshes/: base_link.dae  pneu1_Link.dae  pneu4_Link.dae
src/turtlebot_x/params/: nav2_multirobot_params_2.yaml
src/turtlebot_x/turtlebot_x/: driving_node.py
src/turtlebot_x/worlds/: chairbot.world
